<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#7F8080"
    tools:context=".SettingsPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="416dp"
        android:layout_height="56dp"
        android:background="#D5D5D5"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".SettingsPage"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textColor="#00838F"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.436"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/returnButton"
            android:layout_width="62dp"
            android:layout_height="59dp"
            android:backgroundTint="#D5D5D5"
            android:contentDescription="@string/todo"
            app:srcCompat="?attr/actionModeCloseDrawable" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchmusik"
        android:layout_width="309dp"
        android:layout_height="64dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/settings_music"
        android:textColor="#B2EBF2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.14" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switchsounds"
        android:layout_width="309dp"
        android:layout_height="64dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/settings_sounds"
        android:textColor="#B2EBF2"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.274" />

</androidx.constraintlayout.widget.ConstraintLayout>