<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2C484C"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="416dp"
        android:layout_height="56dp"
        android:background="#126571"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".SettingsPage"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="-1dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choosequiz"
            android:textColor="#7FE0EF"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.445"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/returnButton"
            android:layout_width="62dp"
            android:layout_height="59dp"
            android:backgroundTint="#126571"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/baseline_arrow_back_white_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button
        android:id="@+id/q5"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:padding="0dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.137"
        tools:ignore="SpeakableTextPresentCheck,DuplicateClickableBoundsCheck" />

    <Button
        android:id="@+id/q6"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:padding="0dp"
        android:text="@string/prefixsums"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.307" />

    <Button
        android:id="@+id/q7"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:padding="0dp"
        android:text="@string/binarysearch"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/q8"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:padding="0dp"
        android:text="@string/binarysearch"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.647" />

    <Button
        android:id="@+id/q9"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:backgroundTint="@color/cardview_shadow_start_color"
        android:padding="0dp"
        android:text="@string/binarysearch"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.817" />

    <Button
        android:id="@+id/previous"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:padding="0dp"
        android:text="@string/previous"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.039"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />

    <Button
        android:id="@+id/next"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:padding="0dp"
        android:text="@string/next"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.961"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.987" />


</androidx.constraintlayout.widget.ConstraintLayout>